--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
             if (type === 'click') {
                 if (starValue >= 1) {
-                    output.innerHTML = "You rated this " + starValue +" "+ "stars.";
+                    output.innerHTML = "Your rated this " + starValue +" "+ "stars.";
                 }
             }
 
